set clear (avoid overflow in shallow posts)

--- a/assets/sass/partials/wordpress/_single.scss
+++ b/assets/sass/partials/wordpress/_single.scss
@@ -1,4 +1,8 @@
 .single-post {
+  article {
+    clear: both;
+  }
+
   .nav-single {    
     margin-top: 1em;
     margin-bottom: 2em;
